# EigenTutorial

./: .gitignore  CMakeLists.txt
docs/: cmake_library_guide.md
src/chapter1/: 1.1.declaration.cpp  1.2.initialization.cpp  1.4.vector_operations.cpp  1.5.block_operations.cpp  1.6.element_wise_operations.cpp  1.7.point_transformation.cpp  basic_operations.cpp  declaration.cpp  element_wise_operations.cpp  initialization.cpp  point_transformation.cpp  vector_operations.cpp
src/chapter2/: 2.1.svd.cpp  2.2.svd_point_cloud_alignment.cpp  2.3.qr_decomposition.cpp  2.4.cholesky_decomposition.cpp  2.5.lu_decomposition.cpp  2.6.eigenvalue_decomposition.cpp  2.7.essential_matrix.cpp  cholesky_decomposition.cpp  eigenvalue_decomposition.cpp  essential_matrix.cpp  lu_decomposition.cpp  qr_decomposition.cpp  svd.cpp  svd_point_cloud_alignment.cpp
src/chapter3/: 3.1.rotation_matrix.cpp  3.10.small_angle_approximation.cpp  3.2.quaternion.cpp  3.3.angle_axis.cpp  3.4.euler_angles.cpp  3.5.isometry3d.cpp  3.6.affine3d.cpp  3.7.conversions.cpp  3.8.camera_pose.cpp  3.9.pose_composition.cpp  affine3d.cpp  angle_axis.cpp  camera_pose.cpp  conversions.cpp  euler_angles.cpp  isometry3d.cpp  pose_composition.cpp  quaternion.cpp  rotation_matrix.cpp  small_angle_approximation.cpp
src/chapter4/: 4.1.square_systems.cpp  4.2.spd_systems.cpp  4.3.overdetermined_systems.cpp  4.4.underdetermined_systems.cpp  4.5.weighted_least_squares.cpp  4.6.multiple_rhs.cpp  4.7.solution_quality.cpp  4.8.triangulation.cpp  4.9.pnp.cpp  multiple_rhs.cpp  overdetermined_systems.cpp  pnp.cpp  solution_quality.cpp  spd_systems.cpp  square_systems.cpp  triangulation.cpp  underdetermined_systems.cpp  weighted_least_squares.cpp
src/chapter5/: 5.1.why_sparse.cpp  5.2.creating_sparse.cpp  5.3.sparse_operations.cpp  5.4.iterating_sparse.cpp  5.5.direct_solvers.cpp  5.6.iterative_solvers.cpp  5.7.pose_graph_hessian.cpp  5.8.block_sparse.cpp  5.9.performance_tips.cpp  block_sparse.cpp  creating_sparse.cpp  direct_solvers.cpp  iterating_sparse.cpp  iterative_solvers.cpp  performance_tips.cpp  pose_graph_hessian.cpp  sparse_operations.cpp  why_sparse.cpp
src/chapter6/: 6.1.jacobians.cpp  6.2.numerical_jacobian.cpp  6.3.least_squares.cpp  6.4.gauss_newton.cpp  6.5.levenberg_marquardt.cpp  6.6.se3_jacobians.cpp  6.7.reprojection_error.cpp  6.8.robust_cost_functions.cpp  6.9.simple_ba.cpp  gauss_newton.cpp  jacobians.cpp  least_squares.cpp  levenberg_marquardt.cpp  numerical_jacobian.cpp  reprojection_error.cpp  robust_cost_functions.cpp  se3_jacobians.cpp  simple_ba.cpp
src/chapter7/: 7.1.memory_alignment.cpp  7.2.eigen_map.cpp  7.3.avoiding_temporaries.cpp  7.4.expression_templates.cpp  7.5.common_pitfalls.cpp  7.6.performance_tips.cpp  7.7.integration.cpp  7.8.debugging_tips.cpp  7.9.slam_patterns.cpp  avoiding_temporaries.cpp  common_pitfalls.cpp  debugging_tips.cpp  eigen_map.cpp  expression_templates.cpp  integration.cpp  memory_alignment.cpp  performance_tips.cpp  slam_patterns.cpp
