cmake_minimum_required(VERSION 3.10)
project(EigenTutorial)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Eigen3 REQUIRED)

# Chapter 1: Basic Linear Algebra
add_executable(1.1.declaration src/chapter1/1.1.declaration.cpp)
add_executable(1.2.initialization src/chapter1/1.2.initialization.cpp)
add_executable(1.3.basic_operations src/chapter1/1.3.basic_operations.cpp)
add_executable(1.4.vector_operations src/chapter1/1.4.vector_operations.cpp)
add_executable(1.5.block_operations src/chapter1/1.5.block_operations.cpp)
add_executable(1.6.element_wise_operations src/chapter1/1.6.element_wise_operations.cpp)
add_executable(1.7.point_transformation src/chapter1/1.7.point_transformation.cpp)

target_link_libraries(1.1.declaration Eigen3::Eigen)
target_link_libraries(1.2.initialization Eigen3::Eigen)
target_link_libraries(1.3.basic_operations Eigen3::Eigen)
target_link_libraries(1.4.vector_operations Eigen3::Eigen)
target_link_libraries(1.5.block_operations Eigen3::Eigen)
target_link_libraries(1.6.element_wise_operations Eigen3::Eigen)
target_link_libraries(1.7.point_transformation Eigen3::Eigen)

# Chapter 2: Matrix Decompositions
add_executable(2.1.svd src/chapter2/2.1.svd.cpp)
add_executable(2.2.svd_point_cloud_alignment src/chapter2/2.2.svd_point_cloud_alignment.cpp)
add_executable(2.3.qr_decomposition src/chapter2/2.3.qr_decomposition.cpp)
add_executable(2.4.cholesky_decomposition src/chapter2/2.4.cholesky_decomposition.cpp)
add_executable(2.5.lu_decomposition src/chapter2/2.5.lu_decomposition.cpp)
add_executable(2.6.eigenvalue_decomposition src/chapter2/2.6.eigenvalue_decomposition.cpp)
add_executable(2.7.essential_matrix src/chapter2/2.7.essential_matrix.cpp)

target_link_libraries(2.1.svd Eigen3::Eigen)
target_link_libraries(2.2.svd_point_cloud_alignment Eigen3::Eigen)
target_link_libraries(2.3.qr_decomposition Eigen3::Eigen)
target_link_libraries(2.4.cholesky_decomposition Eigen3::Eigen)
target_link_libraries(2.5.lu_decomposition Eigen3::Eigen)
target_link_libraries(2.6.eigenvalue_decomposition Eigen3::Eigen)
target_link_libraries(2.7.essential_matrix Eigen3::Eigen)

# Chapter 3: Geometry Module
add_executable(3.1.rotation_matrix src/chapter3/3.1.rotation_matrix.cpp)
add_executable(3.2.quaternion src/chapter3/3.2.quaternion.cpp)
add_executable(3.3.angle_axis src/chapter3/3.3.angle_axis.cpp)
add_executable(3.4.euler_angles src/chapter3/3.4.euler_angles.cpp)
add_executable(3.5.isometry3d src/chapter3/3.5.isometry3d.cpp)
add_executable(3.6.affine3d src/chapter3/3.6.affine3d.cpp)
add_executable(3.7.conversions src/chapter3/3.7.conversions.cpp)
add_executable(3.8.camera_pose src/chapter3/3.8.camera_pose.cpp)
add_executable(3.9.pose_composition src/chapter3/3.9.pose_composition.cpp)
add_executable(3.10.small_angle_approximation src/chapter3/3.10.small_angle_approximation.cpp)

target_link_libraries(3.1.rotation_matrix Eigen3::Eigen)
target_link_libraries(3.2.quaternion Eigen3::Eigen)
target_link_libraries(3.3.angle_axis Eigen3::Eigen)
target_link_libraries(3.4.euler_angles Eigen3::Eigen)
target_link_libraries(3.5.isometry3d Eigen3::Eigen)
target_link_libraries(3.6.affine3d Eigen3::Eigen)
target_link_libraries(3.7.conversions Eigen3::Eigen)
target_link_libraries(3.8.camera_pose Eigen3::Eigen)
target_link_libraries(3.9.pose_composition Eigen3::Eigen)
target_link_libraries(3.10.small_angle_approximation Eigen3::Eigen)

# Chapter 4: Solving Linear Systems
add_executable(4.1.square_systems src/chapter4/4.1.square_systems.cpp)
add_executable(4.2.spd_systems src/chapter4/4.2.spd_systems.cpp)
add_executable(4.3.overdetermined_systems src/chapter4/4.3.overdetermined_systems.cpp)
add_executable(4.4.underdetermined_systems src/chapter4/4.4.underdetermined_systems.cpp)
add_executable(4.5.weighted_least_squares src/chapter4/4.5.weighted_least_squares.cpp)
add_executable(4.6.multiple_rhs src/chapter4/4.6.multiple_rhs.cpp)
add_executable(4.7.solution_quality src/chapter4/4.7.solution_quality.cpp)
add_executable(4.8.triangulation src/chapter4/4.8.triangulation.cpp)
add_executable(4.9.pnp src/chapter4/4.9.pnp.cpp)

target_link_libraries(4.1.square_systems Eigen3::Eigen)
target_link_libraries(4.2.spd_systems Eigen3::Eigen)
target_link_libraries(4.3.overdetermined_systems Eigen3::Eigen)
target_link_libraries(4.4.underdetermined_systems Eigen3::Eigen)
target_link_libraries(4.5.weighted_least_squares Eigen3::Eigen)
target_link_libraries(4.6.multiple_rhs Eigen3::Eigen)
target_link_libraries(4.7.solution_quality Eigen3::Eigen)
target_link_libraries(4.8.triangulation Eigen3::Eigen)
target_link_libraries(4.9.pnp Eigen3::Eigen)

# Chapter 5: Sparse Matrices
add_executable(5.1.why_sparse src/chapter5/5.1.why_sparse.cpp)
add_executable(5.2.creating_sparse src/chapter5/5.2.creating_sparse.cpp)
add_executable(5.3.sparse_operations src/chapter5/5.3.sparse_operations.cpp)
add_executable(5.4.iterating_sparse src/chapter5/5.4.iterating_sparse.cpp)
add_executable(5.5.direct_solvers src/chapter5/5.5.direct_solvers.cpp)
add_executable(5.6.iterative_solvers src/chapter5/5.6.iterative_solvers.cpp)
add_executable(5.7.pose_graph_hessian src/chapter5/5.7.pose_graph_hessian.cpp)
add_executable(5.8.block_sparse src/chapter5/5.8.block_sparse.cpp)
add_executable(5.9.performance_tips src/chapter5/5.9.performance_tips.cpp)

target_link_libraries(5.1.why_sparse Eigen3::Eigen)
target_link_libraries(5.2.creating_sparse Eigen3::Eigen)
target_link_libraries(5.3.sparse_operations Eigen3::Eigen)
target_link_libraries(5.4.iterating_sparse Eigen3::Eigen)
target_link_libraries(5.5.direct_solvers Eigen3::Eigen)
target_link_libraries(5.6.iterative_solvers Eigen3::Eigen)
target_link_libraries(5.7.pose_graph_hessian Eigen3::Eigen)
target_link_libraries(5.8.block_sparse Eigen3::Eigen)
target_link_libraries(5.9.performance_tips Eigen3::Eigen)

# Chapter 6: Optimization Basics
add_executable(6.1.jacobians src/chapter6/6.1.jacobians.cpp)
add_executable(6.2.numerical_jacobian src/chapter6/6.2.numerical_jacobian.cpp)
add_executable(6.3.least_squares src/chapter6/6.3.least_squares.cpp)
add_executable(6.4.gauss_newton src/chapter6/6.4.gauss_newton.cpp)
add_executable(6.5.levenberg_marquardt src/chapter6/6.5.levenberg_marquardt.cpp)
add_executable(6.6.se3_jacobians src/chapter6/6.6.se3_jacobians.cpp)
add_executable(6.7.reprojection_error src/chapter6/6.7.reprojection_error.cpp)
add_executable(6.8.robust_cost_functions src/chapter6/6.8.robust_cost_functions.cpp)
add_executable(6.9.simple_ba src/chapter6/6.9.simple_ba.cpp)

target_link_libraries(6.1.jacobians Eigen3::Eigen)
target_link_libraries(6.2.numerical_jacobian Eigen3::Eigen)
target_link_libraries(6.3.least_squares Eigen3::Eigen)
target_link_libraries(6.4.gauss_newton Eigen3::Eigen)
target_link_libraries(6.5.levenberg_marquardt Eigen3::Eigen)
target_link_libraries(6.6.se3_jacobians Eigen3::Eigen)
target_link_libraries(6.7.reprojection_error Eigen3::Eigen)
target_link_libraries(6.8.robust_cost_functions Eigen3::Eigen)
target_link_libraries(6.9.simple_ba Eigen3::Eigen)

# Chapter 7: Practical Skills
add_executable(7.1.memory_alignment src/chapter7/7.1.memory_alignment.cpp)
add_executable(7.2.eigen_map src/chapter7/7.2.eigen_map.cpp)
add_executable(7.3.avoiding_temporaries src/chapter7/7.3.avoiding_temporaries.cpp)
add_executable(7.4.expression_templates src/chapter7/7.4.expression_templates.cpp)
add_executable(7.5.common_pitfalls src/chapter7/7.5.common_pitfalls.cpp)
add_executable(7.6.performance_tips src/chapter7/7.6.performance_tips.cpp)
add_executable(7.7.integration src/chapter7/7.7.integration.cpp)
add_executable(7.8.debugging_tips src/chapter7/7.8.debugging_tips.cpp)
add_executable(7.9.slam_patterns src/chapter7/7.9.slam_patterns.cpp)

target_link_libraries(7.1.memory_alignment Eigen3::Eigen)
target_link_libraries(7.2.eigen_map Eigen3::Eigen)
target_link_libraries(7.3.avoiding_temporaries Eigen3::Eigen)
target_link_libraries(7.4.expression_templates Eigen3::Eigen)
target_link_libraries(7.5.common_pitfalls Eigen3::Eigen)
target_link_libraries(7.6.performance_tips Eigen3::Eigen)
target_link_libraries(7.7.integration Eigen3::Eigen)
target_link_libraries(7.8.debugging_tips Eigen3::Eigen)
target_link_libraries(7.9.slam_patterns Eigen3::Eigen)
